// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`time period stats > processJob > processes a daily and weekly job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1730073599999,
              "sendWeeklySummary": true,
            },
            "name": "timePeriodStats",
            "opts": {
              "attempts": 720,
              "backoff": {
                "delay": 5000,
                "type": "fixed",
              },
            },
          },
        ],
        "name": "scheduler",
        "opts": {
          "deduplication": {
            "id": "timePeriodStats-1730073599999",
          },
          "delay": 41103999,
        },
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-27</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>1000.00</strong> FLIP burned",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On **2024-10-27**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **1000.00** FLIP burned",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On 2024-10-27, we had:
📊 $4,000.00 in total volume
🌐 $3,000.00 of network fees
🤑 $2,000.00 of LP fees
⚡️ $5,000.00 of boost fees
🔥 1000.00 FLIP burned
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-27 are in:
🥇 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e"><strong>ChainflipGod</strong></a> (10.00%)
🥈 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🥉 $1,000.00 <a href="https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN"><strong>cFKj…UgyN</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg"><strong>cFJX…rzLg</strong></a> (10.00%)",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-27 are in:
🥇 $1,000.00 [**ChainflipGod**](https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e) (10.00%)
🥈 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🥉 $1,000.00 [**cFKj…UgyN**](https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN) (10.00%)
🏅 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🏅 $1,000.00 [**cFJX…rzLg**](https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg) (10.00%)",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-27 are in:
🥇 $1,000.00 ChainflipGod (10.00%)
🥈 $1,000.00 cFNz…MMVh (10.00%)
🥉 $1,000.00 cFKj…UgyN (10.00%)
🏅 $1,000.00 cFNz…MMVh (10.00%)
🏅 $1,000.00 cFJX…rzLg (10.00%)
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-27</strong>, we had:
💸 <strong>17.628901 BTC ($1,189,844.11)</strong> of volume
⚡️ <strong>0.008803 BTC ($594.16)</strong> of earned boost fees
📊 Current APY is <strong>21.35%</strong>",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On **2024-10-27**, we had:
💸 **17.628901 BTC ($1,189,844.11)** of volume
⚡️ **0.008803 BTC ($594.16)** of earned boost fees
📊 Current APY is **21.35%**",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On 2024-10-27, we had:
💸 17.628901 BTC ($1,189,844.11) of volume
⚡️ 0.008803 BTC ($594.16) of earned boost fees
📊 Current APY is 21.35%
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_SWAP_SUMMARY",
          },
          "message": "🗓️ For the week ending <strong>2024-10-27</strong>, we had:
📊 <strong>$28,000.00</strong> in total volume
🌐 <strong>$21,000.00</strong> of network fees
🤑 <strong>$14,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>7000.00</strong> FLIP burned",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_SWAP_SUMMARY",
          },
          "message": "🗓️ For the week ending **2024-10-27**, we had:
📊 **$28,000.00** in total volume
🌐 **$21,000.00** of network fees
🤑 **$14,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **7000.00** FLIP burned",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_SWAP_SUMMARY",
          },
          "message": "🗓️ For the week ending 2024-10-27, we had:
📊 $28,000.00 in total volume
🌐 $21,000.00 of network fees
🤑 $14,000.00 of LP fees
⚡️ $5,000.00 of boost fees
🔥 7000.00 FLIP burned
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e"><strong>ChainflipGod</strong></a> (10.00%)
🥈 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🥉 $1,000.00 <a href="https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN"><strong>cFKj…UgyN</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg"><strong>cFJX…rzLg</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMxkJ79ka5Bu8PTxwMm9E2U8bKR5fwaPuNQBErXoaYvFYwvB"><strong>cFMx…YwvB</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMBE4zhwZ9PQ7xBupusy2mLerkSBhU9oAxoMiCpw3kKAR4Kz"><strong>cFMB…R4Kz</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFLEFzKb4QCruqMn5xrCm2sPFt2taXWrvuSDTvuq6U3etkcPP"><strong>cFLE…kcPP</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFLGvPhhrribWCx9id5kLVqwiFK4QiVNjQ6ViyaRFF2Nrgq7j"><strong>cFLG…gq7j</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFLT2BLiSijog9mvFipfPapisweJ8MMMTQisCiNKAEsBQnn5t"><strong>cFLT…nn5t</strong></a> (10.00%)",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 [**ChainflipGod**](https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e) (10.00%)
🥈 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🥉 $1,000.00 [**cFKj…UgyN**](https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN) (10.00%)
🏅 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🏅 $1,000.00 [**cFJX…rzLg**](https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg) (10.00%)
🏅 $1,000.00 [**cFMx…YwvB**](https://scan.chainflip.io/lps/cFMxkJ79ka5Bu8PTxwMm9E2U8bKR5fwaPuNQBErXoaYvFYwvB) (10.00%)
🏅 $1,000.00 [**cFMB…R4Kz**](https://scan.chainflip.io/lps/cFMBE4zhwZ9PQ7xBupusy2mLerkSBhU9oAxoMiCpw3kKAR4Kz) (10.00%)
🏅 $1,000.00 [**cFLE…kcPP**](https://scan.chainflip.io/lps/cFLEFzKb4QCruqMn5xrCm2sPFt2taXWrvuSDTvuq6U3etkcPP) (10.00%)
🏅 $1,000.00 [**cFLG…gq7j**](https://scan.chainflip.io/lps/cFLGvPhhrribWCx9id5kLVqwiFK4QiVNjQ6ViyaRFF2Nrgq7j) (10.00%)
🏅 $1,000.00 [**cFLT…nn5t**](https://scan.chainflip.io/lps/cFLT2BLiSijog9mvFipfPapisweJ8MMMTQisCiNKAEsBQnn5t) (10.00%)",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 ChainflipGod (10.00%)
🥈 $1,000.00 cFNz…MMVh (10.00%)
🥉 $1,000.00 cFKj…UgyN (10.00%)
🏅 $1,000.00 cFNz…MMVh (10.00%)
🏅 $1,000.00 cFJX…rzLg (10.00%)
🏅 $1,000.00 cFMx…YwvB (10.00%)
🏅 $1,000.00 cFMB…R4Kz (10.00%)
🏅 $1,000.00 cFLE…kcPP (10.00%)
🏅 $1,000.00 cFLG…gq7j (10.00%)
🏅 $1,000.00 cFLT…nn5t (10.00%)
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_BOOST_SUMMARY",
          },
          "message": "🗓️ For the week ending <strong>2024-10-27</strong>, we had:
💸 <strong>123.402307 BTC ($8,328,908.74)</strong> of volume
⚡️ <strong>0.061623 BTC ($4,159.15)</strong> of earned boost fees
📊 Current APY is <strong>21.35%</strong>",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_BOOST_SUMMARY",
          },
          "message": "🗓️ For the week ending **2024-10-27**, we had:
💸 **123.402307 BTC ($8,328,908.74)** of volume
⚡️ **0.061623 BTC ($4,159.15)** of earned boost fees
📊 Current APY is **21.35%**",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "WEEKLY_BOOST_SUMMARY",
          },
          "message": "🗓️ For the week ending 2024-10-27, we had:
💸 123.402307 BTC ($8,328,908.74) of volume
⚡️ 0.061623 BTC ($4,159.15) of earned boost fees
📊 Current APY is 21.35%
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "attempts": 720,
              "backoff": {
                "delay": 5000,
                "type": "fixed",
              },
            },
          },
        ],
        "name": "scheduler",
        "opts": {
          "deduplication": {
            "id": "timePeriodStats-1729900799999",
          },
          "delay": 41103999,
        },
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>1000.00</strong> FLIP burned",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On **2024-10-25**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **1000.00** FLIP burned",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On 2024-10-25, we had:
📊 $4,000.00 in total volume
🌐 $3,000.00 of network fees
🤑 $2,000.00 of LP fees
⚡️ $5,000.00 of boost fees
🔥 1000.00 FLIP burned
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:
🥇 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e"><strong>ChainflipGod</strong></a> (10.00%)
🥈 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🥉 $1,000.00 <a href="https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN"><strong>cFKj…UgyN</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh"><strong>cFNz…MMVh</strong></a> (10.00%)
🏅 $1,000.00 <a href="https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg"><strong>cFJX…rzLg</strong></a> (10.00%)",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:
🥇 $1,000.00 [**ChainflipGod**](https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e) (10.00%)
🥈 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🥉 $1,000.00 [**cFKj…UgyN**](https://scan.chainflip.io/lps/cFKjURUE4jdxHgcKb4uBnKiY9Pkx2yuvQuRVfTDFh5j5eUgyN) (10.00%)
🏅 $1,000.00 [**cFNz…MMVh**](https://scan.chainflip.io/lps/cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh) (10.00%)
🏅 $1,000.00 [**cFJX…rzLg**](https://scan.chainflip.io/lps/cFJXT4WEEdfiShje4z9JMwAvMiMTu7nioPgXsE9o1KqdVrzLg) (10.00%)",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:
🥇 $1,000.00 ChainflipGod (10.00%)
🥈 $1,000.00 cFNz…MMVh (10.00%)
🥉 $1,000.00 cFKj…UgyN (10.00%)
🏅 $1,000.00 cFNz…MMVh (10.00%)
🏅 $1,000.00 cFJX…rzLg (10.00%)
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
💸 <strong>17.628901 BTC ($1,189,844.11)</strong> of volume
⚡️ <strong>0.008803 BTC ($594.16)</strong> of earned boost fees
📊 Current APY is <strong>21.35%</strong>",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On **2024-10-25**, we had:
💸 **17.628901 BTC ($1,189,844.11)** of volume
⚡️ **0.008803 BTC ($594.16)** of earned boost fees
📊 Current APY is **21.35%**",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On 2024-10-25, we had:
💸 17.628901 BTC ($1,189,844.11) of volume
⚡️ 0.008803 BTC ($594.16) of earned boost fees
📊 Current APY is 21.35%
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job without a flip burn or boost fees 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "attempts": 720,
              "backoff": {
                "delay": 5000,
                "type": "fixed",
              },
            },
          },
        ],
        "name": "scheduler",
        "opts": {
          "deduplication": {
            "id": "timePeriodStats-1729900799999",
          },
          "delay": 41103999,
        },
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On **2024-10-25**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
          "message": "🗓️ On 2024-10-25, we had:
📊 $4,000.00 in total volume
🌐 $3,000.00 of network fees
🤑 $2,000.00 of LP fees
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_LP_SUMMARY",
          },
          "message": "💼 Top LPs for 2024-10-25 are in:
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
💸 <strong>17.628901 BTC ($1,189,844.11)</strong> of volume
⚡️ <strong>0.008803 BTC ($594.16)</strong> of earned boost fees
📊 Current APY is <strong>21.35%</strong>",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On **2024-10-25**, we had:
💸 **17.628901 BTC ($1,189,844.11)** of volume
⚡️ **0.008803 BTC ($594.16)** of earned boost fees
📊 Current APY is **21.35%**",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "DAILY_BOOST_SUMMARY",
          },
          "message": "🗓️ On 2024-10-25, we had:
💸 17.628901 BTC ($1,189,844.11) of volume
⚡️ 0.008803 BTC ($594.16) of earned boost fees
📊 Current APY is 21.35%
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;
